--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@uiw/react-codemirror": "^1.0.27",
     "customize-cra": "^0.5.0",
     "electron": "^6.0.9",
-    "http-server": "^0.11.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "localforage": "^1.7.3",
     "marked": "^0.7.0",
     "react": "^16.9.0",
     "react-app-rewire-less": "^2.1.3",
@@ -18,7 +18,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "webpack-target-electron-renderer": "^0.4.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
