--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-app-rewired": "^2.1.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
